--- a/src/app/dominio/home/home.component.html
+++ b/src/app/dominio/home/home.component.html
@@ -3,7 +3,10 @@
     <div class="col-md-9 mx-auto">
       <div class="jumbotron">
         <h3 class="text-center">Bem Vindo !</h3>
-        <p class="text-left mt-2">Ao nosso site Xschool, seu site de compra e venda de livros</p>
+        <div class="col-12 text-center mt-3">
+          <p class="mx-auto">Ao nosso site Xschool, seu site de compra e venda de livros</p>
+          <button type="button" class="btn btn-primary h-25 p-2 mx-auto col-md-3" [routerLink]="['/livro/home']"> Ver Livros</button>
+        </div>
       </div>
     </div>
   </div>
