--- a/src/app/dominio/livro/livro-formulario/livro-formulario.component.html
+++ b/src/app/dominio/livro/livro-formulario/livro-formulario.component.html
@@ -4,20 +4,11 @@
     <p class="text-right text-danger m-0" style="font-size: 12px;">
       * Campos obrigatórios
     </p>
-    <form
-      [formGroup]="livroForm"
-      (ngSubmit)="salvar(livroForm.value)"
-      autocomplete="off"
-    >
+    <form [formGroup]="livroForm" (ngSubmit)="salvar(livroForm.value)" autocomplete="off">
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
         <label for="titulo">Titulo</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="titulo"
-          placeholder="Tipo de Produto"
-          formControlName="titulo"
+        <input type="text" class="form-control mY-5" id="titulo" placeholder="Titulo" formControlName="titulo"
           [ngClass]="{
             'is-valid':
               !livroForm.controls['titulo'].invalid &&
@@ -27,18 +18,16 @@
               livroForm.controls['titulo'].invalid &&
               (livroForm.controls['titulo'].dirty ||
                 livroForm.controls['titulo'].touched)
-          }"
-        />
+          }" />
+          <RNCR-validation-message
+          class="invalid-feedback"
+          [control]="livroForm.controls['titulo']"
+        ></RNCR-validation-message>
       </div>
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
         <label for="edicao">Edição</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="edicao"
-          placeholder="Tipo de Produto"
-          formControlName="edicao"
+        <input type="text" class="form-control mY-5" id="edicao" placeholder="Edição" formControlName="edicao"
           [ngClass]="{
             'is-valid':
               !livroForm.controls['edicao'].invalid &&
@@ -48,19 +37,17 @@
               livroForm.controls['edicao'].invalid &&
               (livroForm.controls['edicao'].dirty ||
                 livroForm.controls['edicao'].touched)
-          }"
-        />
+          }" />
+          <RNCR-validation-message
+          class="invalid-feedback"
+          [control]="livroForm.controls['edicao']"
+        ></RNCR-validation-message>
       </div>
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
         <label for="npaginas">Nº de Paginas</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="npaginas"
-          placeholder="Tipo de Produto"
-          formControlName="npaginas"
-          [ngClass]="{
+        <input type="text" class="form-control mY-5" id="npaginas" placeholder="Paginas do livro"
+          formControlName="npaginas" [ngClass]="{
             'is-valid':
               !livroForm.controls['npaginas'].invalid &&
               (livroForm.controls['npaginas'].dirty ||
@@ -69,18 +56,16 @@
               livroForm.controls['npaginas'].invalid &&
               (livroForm.controls['npaginas'].dirty ||
                 livroForm.controls['npaginas'].touched)
-          }"
-        />
+          }" />
+          <RNCR-validation-message
+          class="invalid-feedback"
+          [control]="livroForm.controls['npaginas']"
+        ></RNCR-validation-message>
       </div>
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
         <label for="tipo">Tipo</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="tipo"
-          placeholder="Tipo de Produto"
-          formControlName="tipo"
+        <input type="text" class="form-control mY-5" id="tipo" placeholder="Tipo de Livro" formControlName="tipo"
           [ngClass]="{
             'is-valid':
               !livroForm.controls['tipo'].invalid &&
@@ -90,63 +75,79 @@
               livroForm.controls['tipo'].invalid &&
               (livroForm.controls['tipo'].dirty ||
                 livroForm.controls['tipo'].touched)
-          }"
-        />
+          }" />
+          <RNCR-validation-message
+          class="invalid-feedback"
+          [control]="livroForm.controls['tipo']"
+        ></RNCR-validation-message>
       </div>
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
-        <label for="categoria">Categoria</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="categoria"
-          placeholder="Tipo de Produto"
-          formControlName="categoria"
-          [ngClass]="{
-            'is-valid':
-              !livroForm.controls['categoria'].invalid &&
-              (livroForm.controls['categoria'].dirty ||
-                livroForm.controls['categoria'].touched),
-            'is-invalid':
-              livroForm.controls['categoria'].invalid &&
-              (livroForm.controls['categoria'].dirty ||
-                livroForm.controls['categoria'].touched)
-          }"
-        />
+        <label for="nome">Categoria</label>
+        <select class="custom-select" formControlName="categoria" [compareWith]="compareFn" [ngClass]="{
+        'is-valid':
+          !livroForm.controls['categoria'].invalid &&
+          (livroForm.controls['categoria'].dirty ||
+            livroForm.controls['categoria'].touched),
+        'is-invalid':
+          livroForm.controls['categoria'].invalid &&
+          (livroForm.controls['categoria'].dirty ||
+            livroForm.controls['categoria'].touched)
+      }">
+          <option *ngFor="let categoria of categorias" [ngValue]="categoria">{{categoria.nome}}</option>
+        </select>
+        <RNCR-validation-message
+        class="invalid-feedback"
+        [control]="livroForm.controls['categoria']"
+      ></RNCR-validation-message>
       </div>
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
-        <label for="autor">Autor</label>
-        <input
-          type="text"
-          class="form-control mY-5"
-          id="autor"
-          placeholder="Tipo de Produto"
-          formControlName="autor"
+        <label for="nome">Autor</label>
+        <select class="custom-select" formControlName="autor" [compareWith]="compareFn" [ngClass]="{
+        'is-valid':
+          !livroForm.controls['autor'].invalid &&
+          (livroForm.controls['autor'].dirty ||
+            livroForm.controls['autor'].touched),
+        'is-invalid':
+          livroForm.controls['autor'].invalid &&
+          (livroForm.controls['autor'].dirty ||
+            livroForm.controls['autor'].touched)
+      }">
+          <option *ngFor="let autor of autores" [ngValue]="autor">{{autor.nome}}</option>
+        </select>
+        <RNCR-validation-message
+        class="invalid-feedback"
+        [control]="livroForm.controls['autor']"
+      ></RNCR-validation-message>
+      </div>
+      <div class="form-group">
+        <p class="m-0 p-0 text-danger d-inline">*</p>
+        <label for="preco">Preço</label>
+        <input type="number" class="form-control mY-5" id="preco" placeholder="99.99" formControlName="preco"
           [ngClass]="{
             'is-valid':
-              !livroForm.controls['autor'].invalid &&
-              (livroForm.controls['autor'].dirty ||
-                livroForm.controls['autor'].touched),
+              !livroForm.controls['preco'].invalid &&
+              (livroForm.controls['preco'].dirty ||
+                livroForm.controls['preco'].touched),
             'is-invalid':
-              livroForm.controls['autor'].invalid &&
-              (livroForm.controls['autor'].dirty ||
-                livroForm.controls['autor'].touched)
-          }"
-        />
+              livroForm.controls['preco'].invalid &&
+              (livroForm.controls['preco'].dirty ||
+                livroForm.controls['preco'].touched)
+          }" />
+          <RNCR-validation-message
+          class="invalid-feedback"
+          [control]="livroForm.controls['preco']"
+        ></RNCR-validation-message>
       </div>
       <div class="row mb-4">
-        <div class="col-md-5">
-          <button
-            type="submit"
-            class="btn btn-success btn-block"
-            [disabled]="!livroForm.valid"
-          >
+        <div class="col-md-5 mb-1">
+          <button type="submit" class="btn btn-success btn-block" [disabled]="!livroForm.valid">
             Salvar
           </button>
         </div>
         <div class="col-md"></div>
-        <div class="col-md-5">
+        <div class="col-md-5 mb-1">
           <button [routerLink]="['/livro/list']" class="btn btn-danger btn-block">
             Voltar
           </button>
