--- a/src/app/dominio/livro/livro-list/livro-list.component.html
+++ b/src/app/dominio/livro/livro-list/livro-list.component.html
@@ -1,7 +1,7 @@
 <section class="my-4">
   <div class="row my-2">
     <div class="col-md-9">
-      <h3>Lista de Livros</h3>
+      <h3>Meus Livros</h3>
     </div>
     <div class="col-md">
         <button type="button" class=" btn btn-primary btn-block" [routerLink]="['/livro/new']"> Adicionar Livro</button>
@@ -21,17 +21,17 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let livro of livros">
-        <td>{{livro.id}}</td>
+      <tr *ngFor="let livro of livros;let i=index">
+        <td>{{i+1}}</td>
         <td>{{livro.titulo}}</td>
-        <td>{{livro.edicao}}</td>
+        <td>{{livro.edicao}}</td> 
         <td>{{livro.npaginas}}</td>
         <td>{{livro.tipo}}</td>
-        <td>{{livro.categoria}}</td>
-        <td>{{livro.autor}}</td>
+        <td>{{livro.categoria.nome}}</td>
+        <td>{{livro.autor.nome}}</td>
         <td>
-          <a [routerLink]="['/livro/update', livro.id]">Alterar</a> |
-          <a (click)="excluir(livro.id)">Excluir</a>
+          <a [routerLink]="['/livro/update', livro.id]"><img class="iconimag" src="assets/Imagens/lapis.png" alt="Alterar Livro"> </a> &nbsp;
+          <a (click)="excluir(livro.id)"><img class="iconimag" src="assets/Imagens/lixo.jpg" alt="Deletar Livro"></a>
         </td>
       </tr>
     </tbody>
