--- a/src/app/dominio/livro/livro-card/livro-card.component.html
+++ b/src/app/dominio/livro/livro-card/livro-card.component.html
@@ -7,7 +7,7 @@
     <span class="place-info-box-text">{{ livro?.titulo }}</span>
     <span class="place-info-box-star">{{ livro?.edicao }} Edição</span>
     <span class="place-info-box-detail"><b>Categotria: </b> {{ livro?.categoria.nome }}</span>
-    <span class="place-info-box-detail"><b>Autor: </b> {{ livro?.autor.nome }}</span>
+    <span class="place-info-box-detail"><b>Autor: </b> {{ livro?.autor }}</span>
     <span class="place-info-box-text star"><a (click)="AddFav()" >
         <img *ngIf="fav" class="iconimag" [src]="fav_on" alt="Favorito" />
         <img *ngIf="!fav" class="iconimag" [src]="fav_none" alt="Not Favorito" />
