--- a/src/app/dominio/usuario/usuario-perfil/usuario-perfil.component.html
+++ b/src/app/dominio/usuario/usuario-perfil/usuario-perfil.component.html
@@ -46,7 +46,7 @@
       <div class="form-group">
         <p class="m-0 p-0 text-danger d-inline">*</p>
         <label for="senha">Senha</label>
-        <input type="text" class="form-control mY-5" id="senha" placeholder="Senha" 
+        <input type="password" class="form-control mY-5" id="senha" placeholder="Senha" 
           formControlName="senha" [ngClass]="{
             'is-valid':
               !usuarioForm.controls['senha'].invalid &&
