--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item" routerLinkActive="active">
+              <!-- <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/home']">Home</a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/produto']">Produtos</a>
               </li> -->
@@ -46,18 +46,18 @@
           </ul>
           </nav>
         </div>
-        <div class="col-md-9 p-0">
+        <div class="col-md-9 p-2">
           <carrinho-widget></carrinho-widget>
         </div>
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-md-10 mx-auto">
       <router-outlet></router-outlet>
     </div>
   </div>
-  <footer class="row mt-5">
+  <footer class="row mt-3">
     <div class="col-md-12 text-center">
       <hr />
       <p>CopyRight &#174; Direitos Reservados</p>
