--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,19 @@
     <div class="col-md-5 ">
       <header>
         <nav class="navbar navbar-expand-lg navbar-light  ">
-          <a class="navbar-brand" href="#">Xschool</a>
+          <a class="navbar-brand" [routerLink]="['/livro/home']">Xschool</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <!-- <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/home']">Home</a>
-              </li> -->
-              <!-- <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/produto']">Produtos</a>
-              </li> -->
               <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['/livro/home']">Livros</a>
+              </li>
+
+              <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/livro/categoria']">Categorias</a>
               </li>
             </ul>
           </div>
